[package]
name = "connections-rs"
version = "0.1.0"
authors = ["Master-Hash <hash@hash.memorial>"]
edition = "2021"

# [rust]
# lld = true

# [lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bevy = { version = "0.14.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "sysinfo_plugin",
    "webgpu",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
