[package]
name = "connections-rs"
version = "0.1.0"
authors = ["Master-Hash <hash@hash.memorial>"]
edition = "2024"

# [rust]
# lld = true

# [lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# https://bevy-cheatbook.github.io/setup/bevy-config.html
# https://docs.rs/crate/bevy/0.15.0/features
bevy = { version = "0.16.0-rc.5", default-features = false, features = [
    "async_executor",
    "bevy_gilrs",
    "bevy_window",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "sysinfo_plugin",
    "std",
    "web",
    "webgpu",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
strip = true
codegen-units = 1
opt-level = "s"
lto = "fat"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
